Improve handling of ThreadLocal cleaning in newer Java versions (15+)