@@ -3,6 +3,9 @@ package de.knowwe.rdf2go;
 import java.lang.ref.Reference;
 import java.lang.reflect.Array;
 import java.lang.reflect.Field;
+import java.lang.reflect.InaccessibleObjectException;
+
+import com.denkbares.utils.Log;
 
 /**
  * Cleanup all thread locals for the current thread, so use with patient.
@@ -12,6 +15,8 @@ import java.lang.reflect.Field;
  */
 
 public class ThreadLocalCleaner {
+
+	private static boolean active = true;
 
 	/**
 	 * Cleans all thread local entries of the current thread, so be sure you don't
@@ -29,6 +34,7 @@ public class ThreadLocalCleaner {
 	 * @param thread the thread to clean the thread locals for
 	 */
 	public static void cleanThreadLocals(Thread thread) {
+		if (!active) return;
 		try {
 			// Get a reference to the thread locals table of the current thread
 			Field threadLocalsField = Thread.class.getDeclaredField("threadLocals");
@@ -60,6 +66,11 @@ public class ThreadLocalCleaner {
 					}
 				}
 			}
+		}
+		catch (InaccessibleObjectException e) {
+			active = false;
+			Log.severe("\nUnable to clean graphdb thread locals in newer Java versions. Deactivating cleaner for current sessions." +
+					"\nYou may try java setting --illegal-access=permit or =warn.", e);
 		}
 		catch (Exception e) {
 			// We will tolerate an exception here and just log it
